// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider> renders 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {caption} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {children} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View>
      <View />
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {dataSource} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {itemMargin} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {navigation} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "left": -16,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="box-only"
      style={
        Array [
          undefined,
          Array [
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "width": "auto",
            },
            undefined,
            Object {
              "height": 48,
              "paddingHorizontal": 16,
            },
            undefined,
            Object {
              "backgroundColor": "#62e6ac",
              "borderRadius": 0,
            },
            undefined,
          ],
          Array [
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "width": "auto",
            },
            undefined,
            Object {
              "height": 48,
              "paddingHorizontal": 16,
            },
            undefined,
            Object {
              "backgroundColor": "#62e6ac",
              "borderRadius": 0,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "height": "auto",
              "width": "100%",
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "justifyContent": "center",
            },
            Object {
              "width": "auto",
            },
            undefined,
          ]
        }
      >
        <Text />
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            0,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "right": -16,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="box-only"
      style={
        Array [
          undefined,
          Array [
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "width": "auto",
            },
            undefined,
            Object {
              "height": 48,
              "paddingHorizontal": 16,
            },
            undefined,
            Object {
              "backgroundColor": "#62e6ac",
              "borderRadius": 0,
            },
            undefined,
          ],
          Array [
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "width": "auto",
            },
            undefined,
            Object {
              "height": 48,
              "paddingHorizontal": 16,
            },
            undefined,
            Object {
              "backgroundColor": "#62e6ac",
              "borderRadius": 0,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
              "height": "auto",
              "width": "100%",
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "justifyContent": "center",
            },
            Object {
              "width": "auto",
            },
            undefined,
          ]
        }
      >
        <Text />
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            0,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {snap=false} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    horizontal={true}
    onScroll={[Function]}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {steps} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {style} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "backgroundColor": "orange",
        "padding": 20,
      }
    }
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Object {
            "marginRight": 8,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {title} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={NaN}
  >
    <View />
  </RCTScrollView>
</View>
`;
